# ALPRme

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy.yml
docs/: ARCHITECTURE.md  CAMERA_PIPELINE.md  EVALUATION.md  FILTERING_PIPELINE.md  README.md  SETTINGS.md  SETUP.md  TESTING.md  TILING_ANALYSIS.md
public/: fixtures  worker-test.html
public/models/: cct_v2_global_plate_config.json
scripts/: gen-certs.sh  replay.ts  setup-models.py
src/: App.vue  env.d.ts  magvar.d.ts  main.ts  router.ts  style.css
src/capture/: capabilities.ts  controller.ts  profile.ts  tiling.ts
src/components/: CameraControls.vue  CaptureProfileMenu.vue  CaptureTab.vue  GridEditor.vue  HelpTab.vue  PWABadge.vue  SessionsListTab.vue  SettingsTab.vue
src/composables/: useAlpr.ts  useCamera.ts  useCaptureProfile.ts  useDb.ts  useInferenceLoop.ts  useNetwork.ts  usePrefs.ts  useSensors.ts  useSession.ts
src/pipeline/: fuzzy.ts  index.ts  motion.ts  prefilter.ts  presets.ts  stabilizer.ts  trace.ts
src/sensors/: location.ts  orientation.ts
src/setup/: modelCatalog.ts
src/storage/: db.ts  dedup.ts  export.ts  session.ts  utils.ts
src/views/: AppShell.vue  ProfileEditorView.vue  SessionView.vue  SetupView.vue
test/: sanity.test.ts  vitest.setup.ts
test/alpr/: cross-model-parity.test.ts  decode.test.ts  parity.test.ts  preprocess.test.ts
test/capture/: capabilities.test.ts  controller.test.ts  defaults.test.ts  tiling.test.ts
(+44 files in other folders)
